# SpellWriting

./: .gitignore  README.md  pyproject.toml  requirements.txt
SpellWriting/: abstract.py
SpellWriting/attributes/: __init__.py
SpellWriting/cli/: main.py
SpellWriting/data/fifth_edition/: __init__.py  fifth_edition.yaml
SpellWriting/generation/: __init__.py  data.py  draw.py  edge.py  geometry.py  necklace.py  node.py
SpellWriting/spell/: __init__.py
glyphloom/: __main__.py  quill.py
glyphloom/data/fifth_edition/: 5eTools_Index.yaml  __init__.py  fifth_edition.yaml
glyphloom/generation/: __init__.py  data.py  draw.py  geometry.py
scripts/: __init__.py  necklaces.py  quill.py  spells.py  test_functions.py
