[project]
name = "spellwriting"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3"
dependencies = [
    "matplotlib",
    "numpy",
    "pyyaml>=5.4.1",
    "rapidfuzz>=1.9.1",
    "requests>=2.25.1",
    "tqdm",
    "typer>=0.0.1",
]


[tool.setuptools.package-data]
SpellWriting = ["data/**/*.yaml"]
